[gd_scene load_steps=5 format=3 uid="uid://ctmsybx8hsmrm"]

[ext_resource type="Script" path="res://pages/menu_principal/NotionsImportantes/Cours.gd" id="1_15o7o"]
[ext_resource type="FontFile" uid="uid://d4ccl5aysy53m" path="res://res/Merriweather/Merriweather-Bold.ttf" id="2_t0v1v"]
[ext_resource type="PackedScene" uid="uid://v5vu3snk6ao5" path="res://pages/menu_principal/NotionsImportantes/ButtonDirectory.tscn" id="3_blc0g"]

[sub_resource type="LabelSettings" id="LabelSettings_aest7"]
font = ExtResource("2_t0v1v")
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="NotionsImportantes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15o7o")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="ScrollContainer" parent="ScrollContainer/CenterContainer"]
custom_minimum_size = Vector2(600, 900)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/CenterContainer/Container/VBoxContainer"]
layout_mode = 2

[node name="Bt_Retour" type="Button" parent="ScrollContainer/CenterContainer/Container/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Retour"

[node name="Titre" type="Label" parent="ScrollContainer/CenterContainer/Container/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Notions Importantes"
label_settings = SubResource("LabelSettings_aest7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/CenterContainer/Container/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Path" type="Label" parent="ScrollContainer/CenterContainer/Container/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 25)
layout_mode = 2
text = "Conjugaison / Indicatif / "
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/CenterContainer/Container/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Directories_Files_Listing" type="VBoxContainer" parent="ScrollContainer/CenterContainer/Container/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="ButtonDirectory" parent="ScrollContainer/CenterContainer/Container/VBoxContainer/Directories_Files_Listing" instance=ExtResource("3_blc0g")]
layout_mode = 2

[node name="TextContent" type="RichTextLabel" parent="ScrollContainer/CenterContainer/Container/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 650)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "
[font_size=30][center][b]Le présent de l'indicatif[/b][/center][/font_size]

[center]__________[/center]

Le présent espagnol (presente de indicativo) correspond au présent français. On l'emploie généralement pour parler d’une situation présente ou futur.

[center][b]-- Quand utiliser le présent de l'indicatif en espagnol ? --[/b][/center]

Le présent est utilisé dans les cas suivants : 

  - fait ou situation dans le présent
      [i][color=blue]Ex : Este es Juan (C'est Juan)[/color][/i]

  - action dans le présent
     [i][color=blue]Ex : Juega al ajedrez. (Il joue aux échecs)[/color][/i]

  - exprimer la durée d'une action qui continue au moment du discours
    [i][color=blue]Ex : Practica este deporte desde hace mucho tiempo. (Il pratique ce sport depuis longtemps.)[/color][/i]

  - action qui aura lieu dans le futur (toujours avec un indicateur du futur)
    [i][color=blue]Ex : Mañana tiene su examen. (Demain, il a son examen.)[/color][/i]

[center][b]-- Comment conjuguer les verbes espagnols au présent de l'indicatif ? --[/b][/center]

Pour conjuguer les verbes au présent, on remplace les terminaisons ar/er/ir de l’infinitif par les terminaisons suivantes :

[b]Verbes en -AR[/b] :
   [i]yo[/i] : [b][color=red]-o[/color][/b]
   [i]tu[/i] : [b][color=red]-as[/color][/b]
   [i]el/ella/usted[/i] : [b][color=red]-a[/color][/b]
   [i]nosotros[/i] : [b][color=red]-amos[/color][/b]
   [i]vosotros[/i] : [b][color=red]-áis[/color][/b]
   [i]ellos/ellas/ustedes[/i] : [b][color=red]-an[/color][/b] 


[b]Verbes en -ER[/b] :
   [i]yo[/i] : [b][color=red]-o[/color][/b]
   [i]tu[/i] : [b][color=red]-es[/color][/b]
   [i]el/ella/usted[/i] : [b][color=red]-e[/color][/b]
   [i]nosotros[/i] : [b][color=red]-emos[/color][/b]
   [i]vosotros[/i] : [b][color=red]-éis[/color][/b]
   [i]ellos/ellas/ustedes[/i] : [b][color=red]-en[/color][/b] 


[b]Verbes en -IR[/b] :
   [i]yo[/i] : [b][color=red]-o[/color][/b]
   [i]tu[/i] : [b][color=red]-es[/color][/b]
   [i]el/ella/usted[/i] : [b][color=red]-e[/color][/b]
   [i]nosotros[/i] : [b][color=red]-imos[/color][/b]
   [i]vosotros[/i] : [b][color=red]-ís[/color][/b]
   [i]ellos/ellas/ustedes[/i] : [b][color=red]-en[/color][/b] 


[b]Exemple pour le verbe tomar[/b] :
   [i]yo[/i] : [b][color=blue]tomo[/color][/b]
   [i]tu[/i] : [b][color=blue]tomas[/color][/b]
   [i]el/ella/usted[/i] : [b][color=blue]toma[/color][/b]
   [i]nosotros[/i] : [b][color=blue]tomamos[/color][/b]
   [i]vosotros[/i] : [b][color=blue]tomáis[/color][/b]
   [i]ellos/ellas/ustedes[/i] : [b][color=blue]toman[/color][/b] 

"

[connection signal="pressed" from="ScrollContainer/CenterContainer/Container/VBoxContainer/HBoxContainer/Bt_Retour" to="." method="_on_bt_retour_pressed"]
